--- a/Designs/UI/events.html
+++ b/Designs/UI/events.html
@@ -3,8 +3,8 @@
 
 <head>
   <title>Bright Events</title>
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-</head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></head>
 <style>
   body {
     background-color: rgb(124, 188, 204);
