--- a/Designs/UI/login.html
+++ b/Designs/UI/login.html
@@ -3,12 +3,11 @@
 
 <head>
   <title>Bright Events</title>
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-</head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></head>
 
 <body>
   <h4>Log in to bright events</h4>
-  <form>
     <form>
       <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
@@ -20,6 +19,7 @@
       </div>
       <button type="submit" class="btn btn-primary">Sign in</button>
     </form>
+    <a href="register.html">Register</a>
 </body>
 
 </html>
