--- a/Designs/UI/register.html
+++ b/Designs/UI/register.html
@@ -3,12 +3,11 @@
 
 <head>
   <title>Bright Events</title>
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
-</head>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></head>
 
 <body>
   <h4>Welcome to bright events</h4>
-  <form>
     <form>
       <div class="form-group">
         <label for="firstname">First Name</label>
@@ -28,6 +27,7 @@
       </div>
       <button type="submit" class="btn btn-primary">Sign up</button>
     </form>
+    <a href="login.html">Login</a>
 </body>
 
 </html>
